--- a/pom.xml
+++ b/pom.xml
@@ -1,99 +1,21 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>maxiFilm</groupId>
-	<artifactId>maxiFilm</artifactId>
+
+	<groupId>maxiFilmApp</groupId>
+	<artifactId>maxiFilmApp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
+
+	<name>maxiFilmApp</name>
+	<url>http://maven.apache.org</url>
+
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.7</version>
-		</dependency>
-		<dependency>
-			<groupId>de.jensd</groupId>
-			<artifactId>fontawesomefx</artifactId>
-			<version>8.0.10</version>
-		</dependency>
-		<dependency>
-			<groupId>io.datafx</groupId>
-			<artifactId>core</artifactId>
-			<version>8.0.7</version>
-		</dependency>
-		<dependency>
-			<groupId>io.datafx</groupId>
-			<artifactId>flow</artifactId>
-			<version>8.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.jfoenix</groupId>
-			<artifactId>jfoenix</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-		</dependency>
-	</dependencies>
-	<build>
-		<finalName>maxiFilm</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.2</version>
-				<!-- nothing here -->
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.6</version>
-				<executions>
-					<execution>
-						<id>MaxiFilm</id>
-						<configuration>
-							<archive>
-								<manifest>
-									<mainClass>main.MaxiFilm</mainClass>
-								</manifest>
-							</archive>
-							<descriptorRefs>
-								<descriptorRef>jar-with-dependencies</descriptorRef>
-							</descriptorRefs>
-							<finalName>maxiFilm</finalName>
-						</configuration>
-						<phase>package</phase>
-						<goals>
-							<goal>assembly</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>MaxiFilmCli</id>
-						<configuration>
-							<archive>
-								<manifest>
-									<mainClass>main.MaxiFilmCli</mainClass>
-								</manifest>
-							</archive>
-							<descriptorRefs>
-								<descriptorRef>jar-with-dependencies</descriptorRef>
-							</descriptorRefs>
-							<finalName>maxiFilmCli</finalName>
-						</configuration>
-						<phase>package</phase>
-						<goals>
-							<goal>assembly</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+
+	<modules>
+		<module>client</module>
+		<module>front</module>
+	</modules>
 </project>
