--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -5,20 +5,14 @@
 	<parent>
 		<groupId>maxiFilmApp</groupId>
 		<artifactId>maxiFilmApp</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>commons</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>commons</name>
 	<url>http://maven.apache.org</url>
-	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
 
 	<dependencies>
 		<dependency>
@@ -43,7 +37,7 @@
 							<descriptorRefs>
 								<descriptorRef>jar-with-dependencies</descriptorRef>
 							</descriptorRefs>
-							<finalName>maxiFilmCommons-${version}</finalName>
+							<finalName>maxiFilmCommons-${project.version}</finalName>
 						</configuration>
 						<phase>package</phase>
 						<goals>
